Fix empty branch in regex

Fixes bug 649244:
https://bugzilla.gnome.org/show_bug.cgi?id=649244

Closes #57.

(cherry picked from commit c2b0a184a9e052d445bedda817b233c05424062e)

Change-Id: I1e837a212262f5f2ef78300b38b6603ec9c02b29